[gd_scene load_steps=24 format=2]

[ext_resource path="res://attacker.gd" type="Script" id=1]
[ext_resource path="res://assets/Key_frames.png" type="Texture" id=2]
[ext_resource path="res://assets/atk_1_1/nippy.PNG" type="Texture" id=3]
[ext_resource path="res://assets/qd_atk/Atk_Anim-1.png" type="Texture" id=4]
[ext_resource path="res://assets/qd_atk/Atk_Anim-2.png" type="Texture" id=5]
[ext_resource path="res://assets/qd_atk/Atk_Anim-3.png" type="Texture" id=6]
[ext_resource path="res://assets/qd_atk/Atk_Anim-4.png" type="Texture" id=7]
[ext_resource path="res://assets/qd_atk/Atk_Anim-5.png" type="Texture" id=8]
[ext_resource path="res://assets/qd_atk/Atk_Anim-6.png" type="Texture" id=9]
[ext_resource path="res://assets/qd_atk/Atk_Anim-7.png" type="Texture" id=10]
[ext_resource path="res://assets/qd_atk/Atk_Anim-8.png" type="Texture" id=11]
[ext_resource path="res://assets/qd_atk/Atk_Anim-9.png" type="Texture" id=12]
[ext_resource path="res://assets/qd_atk/Atk_Anim-10.png" type="Texture" id=13]
[ext_resource path="res://assets/qd_atk/Atk_Anim-11.png" type="Texture" id=14]
[ext_resource path="res://assets/qd_atk/Atk_Anim-12.png" type="Texture" id=15]
[ext_resource path="res://assets/qd_atk/atk1.tres" type="Animation" id=16]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.00230947 )
colors = PoolColorArray( 0.827451, 1, 0, 1, 1, 1, 1, 1 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "prefab",
"speed": 5.0
} ]

[sub_resource type="Animation" id=3]
resource_name = "atk1_1"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.000131488 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../attack_slash:width")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.00437791, 0.296109 ),
"transitions": PoolRealArray( 0.277392, 0.267943 ),
"update": 0,
"values": [ 5.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../attack_slash:gradient:colors")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.00805938 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ PoolColorArray( 1, 0, 0, 1, 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../rest:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../attack_slash:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -11.2056, -40.7154 ), Vector2( -11.2056, -40.7154 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../attack_slash:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("../attack_slash:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("../attack_slash:points")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ PoolVector2Array( -40, 0, 0, 0 ), PoolVector2Array( -40, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "atk1_2"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.000131488 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../attack_slash:width")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.00437791, 0.296109 ),
"transitions": PoolRealArray( 0.277392, 0.267943 ),
"update": 0,
"values": [ 5.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../attack_slash:gradient:colors")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ PoolColorArray( 0, 0.972549, 1, 1, 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../rest:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.293253 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=6]
resource_name = "atk1_2_2"
length = 0.45
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../nippy:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.35 ),
"transitions": PoolRealArray( 3.13834, 0.999999 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 450 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../nippy:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.35 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 10, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../attack_slash:width")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3, 0.35, 0.45 ),
"transitions": PoolRealArray( 0.277392, 0.267943, 0.25, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 5.0, 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../attack_slash:points")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.15, 0.45 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ PoolVector2Array( -60, 0, 0, 0 ), PoolVector2Array( -60, 0, 0, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../attack_slash:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.15, 0.45 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 138, 418 ), Vector2( 138.7, 418.701 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("../attack_slash:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.15, 0.45 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 35.8, 35.8 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("../attack_slash:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0.15, 0.45 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/9/type = "value"
tracks/9/path = NodePath(".:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("../rest:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0.15 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("../attack_slash:gradient:colors")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 0.45 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ PoolColorArray( 0, 0.972549, 1, 1, 1, 1, 1, 1 ), PoolColorArray( 0, 0.972549, 1, 1, 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "atk1_3"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.000131488 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../attack_slash:width")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.00437791, 0.296109 ),
"transitions": PoolRealArray( 0.277392, 0.267943 ),
"update": 0,
"values": [ 5.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../attack_slash:gradient:colors")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.00805938 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ PoolColorArray( 0.898039, 1, 0, 1, 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../rest:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=7]
resource_name = "atk1_3_2"
length = 0.8
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 8, 9, 10, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../nippy:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../nippy:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1.93187, 0.392292, 0.450625, 1 ),
"update": 0,
"values": [ Vector2( 10, 0 ), Vector2( 10, 0 ), Vector2( 60, 0 ), Vector2( 65, 0 ), Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../attack_slash:width")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.35, 0.4, 0.7 ),
"transitions": PoolRealArray( 0.183011, 0.277392, 1.51571, 0.25 ),
"update": 0,
"values": [ 0.0, 0.0, 5.0, 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../attack_slash:points")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ PoolVector2Array( -40, 0, 0, 0 ), PoolVector2Array( -40, 0, 0, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../attack_slash:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.4, 0.55 ),
"transitions": PoolRealArray( 0.225313, 1, 0.225313 ),
"update": 0,
"values": [ Vector2( 671, -107 ), Vector2( 671.712, -107 ), Vector2( 706, -107 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("../attack_slash:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -44.9999, -44.9999 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("../attack_slash:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.65 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("../rest:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/10/type = "value"
tracks/10/path = NodePath(".:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("../attack_slash:gradient:colors")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 0.79987 ),
"transitions": PoolRealArray( 1.1487, 1.1487 ),
"update": 1,
"values": [ PoolColorArray( 0.827451, 1, 0, 1, 1, 1, 1, 1 ), PoolColorArray( 0.827451, 1, 0, 1, 1, 1, 1, 1 ) ]
}

[node name="atk_anim" type="Node2D"]
position = Vector2( 380.942, 314.078 )
scale = Vector2( 0.6, 0.6 )
script = ExtResource( 1 )

[node name="rest" type="Sprite" parent="."]
visible = false
position = Vector2( -346.223, 101.902 )
scale = Vector2( 0.45, 0.45 )
texture = ExtResource( 2 )

[node name="attack_slash" type="Line2D" parent="."]
position = Vector2( 706, -107 )
rotation = -0.785396
scale = Vector2( 5, 5 )
points = PoolVector2Array( -40, 0, 0, 0 )
width = 0.0
default_color = Color( 1, 0, 0, 1 )
gradient = SubResource( 1 )
texture_mode = -1392464896
begin_cap_mode = 2
end_cap_mode = 1

[node name="nippy" type="Sprite" parent="."]
visible = false
position = Vector2( -466.018, 148.176 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 3 )

[node name="attack_sprites" type="AnimatedSprite" parent="."]
scale = Vector2( 0.6, 0.6 )
frames = SubResource( 2 )
animation = "prefab"
frame = 11

[node name="ATK_PLAYER" type="AnimationPlayer" parent="attack_sprites"]
anims/atk1 = ExtResource( 16 )
anims/atk1_1 = SubResource( 3 )
anims/atk1_2 = SubResource( 4 )
anims/atk1_2_2 = SubResource( 6 )
anims/atk1_3 = SubResource( 5 )
anims/atk1_3_2 = SubResource( 7 )

[node name="sympathy_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="animation_finished" from="attack_sprites/ATK_PLAYER" to="." method="_animation_finished"]
[connection signal="timeout" from="sympathy_timer" to="." method="_on_sympathy_timer_timeout"]
